2011-12-08  Sebastien Binet  <binet@voatlas51.cern.ch>

	* tagging PyUtils-00-11-11
	* improved d3pd-reader generator code for athena
	* M bin/atl-gen-athena-d3pd-reader

	* tagging PyUtils-00-11-10
	* first stab at a d3pd-reader generator code for athena
	* A bin/atl-gen-athena-d3pd-reader

2011-11-18  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-11-09
	* fix bug 85245: allow -m in various places
	* M bin/avn.py

2011-11-08  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-11-08
	* obo Peter vG: adjust to the new DataHeader placement
	* M python/PoolFile.py

2011-11-04  Frank Winklmeier  <fwinkl@cern>

	* tagging PyUtils-00-11-07
	* python/scripts/tc_submit_tag.py: Remove accidentally comitted debugging code

	* tagging PyUtils-00-11-06
	* A python/scripts/tc_find_tag.py: new acmd to find TC package version
	* M python/scripts/__init__.py: Register tc_find_tag
	* M python/AmiLib.py: Add get_version_of_pkg_with_deps function; sort list of (open) release by default

2011-10-28  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-11-05
	* support new GRL schema
	* M bin/filter-and-merge-d3pd.py

2011-10-20  Frank Winklmeier  <fwinkl@cern>

	* tagging PyUtils-00-11-04
	* bin/tcSubmitTag.py: Remove deprecation warning

	* tagging PyUtils-00-11-03
	* bin/tcSubmitTag.py: Make it an alias for acmd.py tc submit-tag

	* tagging PyUtils-00-11-02
	* M python/scripts/tc_submit_tag.py: Use latest SVN tag if none given; respect order of tags
	  given on the command line; if one tag and multiple releases given submit same tag to all
	* M python/acmdlib.py: Preserve formatting in sub-command description

2011-10-10  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-11-01
	* obo Joe Tuggle: add an ignore list to diff-poolfile
	* M python/PoolFile.py

2011-09-20  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-11-00
	* update athfile ref-files for CASTOR->EOS migration
	* added a xrootd/bs test